@@ -1,1 +1,9 @@
 # Contact-List-app
+This repository contains source code and executable jar file of ContactList app
+jar file is in out folder.
+
+to deploy app
+use below command
+set directory to javafx libraries
+
+java --module-path _folder_where_javafx_modules_are_stored --add-modules javafx.fxml,javafx.controls,java.xml -jar _jar_file_name(it is in out folder)
